@@ -1,6 +1,6 @@
 Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
 Upstream-Name: blah
-Upstream-Contact: Jelmer <jelmer@jelmer@jelmer.uk>
+Upstream-Contact: Jelmer <jelmer@jelmer.uk>
 Source: https://salsa.debian.org/jelmer/blah
 
 Files: *
