@@ -2,6 +2,8 @@ lintian-brush (0.62) UNRELEASED; urgency=medium
 
   * Bump maximum debhelper compat version in sid to 13. Closes: #958775
   * Handle old style freedesktop git URLs with /git/ prefix.
+  * Don't remove name/contact from upstream metadata if different from
+    copyright. Closes: #948948
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 25 Apr 2020 03:28:37 +0000
 
